[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/sprites/wood_floor.png" type="Texture" id=1]
[ext_resource path="res://scripts/floor_tile.gd" type="Script" id=2]

[node name="Sprite" type="Sprite"]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -188.907, -7.05829, 0.169922, -116.723, 187.986, -8.31879, 0.169922, 100.715 )

[node name="test_label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
[connection signal="input_event" from="Area2D" to="Area2D" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="Area2D" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="Area2D" method="_on_Area2D_mouse_exited"]
